# omnineck

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
configs/: camera_01.yaml  detector.yaml  omnineck.yaml  training.yaml
configs/camera/: camera_001.yaml
docs/: guide.ipynb  training.ipynb
omnineck/: __init__.py  __version__.py  omnineck.py
omnineck/cli/: __init__.py  run.py
omnineck/configs/deploy/: __init__.py  camera.py  deploy.py  detector.py
omnineck/configs/train/: __init__.py  data.py  model.py  train.py
omnineck/devices/: __init__.py
omnineck/devices/camera/: __init__.py  usbcamera.py
omnineck/models/: __init__.py
omnineck/models/onnx/: __init__.py  necknet.py
omnineck/models/torch/: __init__.py  datamodule.py  necknet.py
omnineck/modules/: __init__.py
omnineck/modules/protobuf/: omnineck_msg.proto  omnineck_msg_pb2.py
omnineck/modules/zmq/: __init__.py  omnineck.py
omnineck/utils/: camera_utils.py  data_utils.py  nn_utils.py
scripts/: calib2yaml.m  calibrate_camera.py  convert_node_set.py  deploy.py  export_hef.py  export_onnx.py  export_parquet.py  export_safetensors.py  generate_pb.py  read_odb.py  run.bat  run.sh  run_omnineck.py  train.py
templates/omnineck/: bound_node.txt  deform_node.txt  element.txt  node.txt  omnineck.cae  omnineck.inp  surface_coordinate.txt  surface_node.txt  surface_triangle.txt  triangle.txt  zero_node.txt
